getting rid of settings persistence and creating static file
