# src/api/settings/dal.js
@@ -1,20 +1,7 @@
-import Settings from './model';
+const config = require('../../config');
 
 export default {
-    async setSettings(data) {
-        const settings = new Settings(data);
-        return settings.save();
-    },
-
     async getSettings() {
-        return Settings.find({});
-    },
-
-    async getSetting(id) {
-        return Settings.findOne({ _id: id });
-    },
-
-    async updateSettings(id, data) {
-        return Settings.findOneAndUpdate({ _id: id }, data, { new: true, overwrite: true })
+        return config.SITE_SETTINGS;
     }
 };
